fix: add spacing

--- a/packages/css-core/src/design-tokens/spacings.css
+++ b/packages/css-core/src/design-tokens/spacings.css
@@ -5,6 +5,7 @@
   --em-spacing-s: 16px;
   --em-spacing-m: 20px;
   --em-spacing-l: 24px;
-  --em-spacing-xl: 40px;
+  --em-spacing-xl: 29px;
+  --em-spacing-xxl: 40px;
 
 }
